# ansible-view

./: CHANGELOG.md  Makefile  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/minimal/: site.yml
examples/minimal/tasks/: firewall.yml
examples/webapp/: ansible.cfg  site.yml
examples/webapp/plays/: appservers.yml  base.yml  webservers.yml
examples/webapp/roles/app/defaults/: main.yml
examples/webapp/roles/app/handlers/: main.yml
examples/webapp/roles/app/tasks/: deploy.yml  main.yml  migrate.yml
examples/webapp/roles/common/handlers/: main.yml
examples/webapp/roles/common/tasks/: main.yml  packages.yml
examples/webapp/roles/nginx/defaults/: main.yml
examples/webapp/roles/nginx/handlers/: main.yml
examples/webapp/roles/nginx/tasks/: configure.yml  install.yml  main.yml
examples/webapp/tasks/: firewall.yml  monitoring.yml  ssl.yml
src/ansible_view/cli/: command_view.py  main.py
src/ansible_view/execution/: execution_graph_builder.py
src/ansible_view/models/: node.py  play_node.py  role_node.py  task_node.py
src/ansible_view/parser/: yaml_parser.py
src/ansible_view/resolver/: context.py  include_resolver.py  playbook_loader.py  role_resolver.py  task_resolver.py
src/ansible_view/ui/: tree_renderer.py  tui_renderer.py
tests/: test_cli.py  test_context.py  test_context_extended.py  test_execution.py  test_include_resolver.py  test_node_misc.py  test_playbook_loader.py  test_playbook_loader_coverage.py  test_playbook_loader_errors.py  test_role_resolver.py  test_task_resolver.py  test_task_resolver_edge_cases.py  test_task_resolver_extended.py  test_tree_renderer.py  test_tui_renderer.py  test_zzz_context_mock.py
