[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-view"
version = "0.1.1"
description = "Inspect and navigate Ansible playbook execution flow from the terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Aime Nishimwe" }]
keywords = ["ansible", "playbook", "tui", "cli", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "ansible-core>=2.15",
  "PyYAML>=6.0",
  "rich>=13.7",
  "textual>=0.55",
]

[project.urls]
Homepage = "https://github.com/ascend-trading/ansible-view"
Repository = "https://github.com/ascend-trading/ansible-view"
Issues = "https://github.com/ascend-trading/ansible-view/issues"

[project.scripts]
ansible-view = "ansible_view.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-asyncio>=0.23",
  "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
